Some fixes to css according to #3 Added space around "anyone can edit" checkbox Fixed overflow on edit in firefox

--- a/forum/static/css/thread.scss
+++ b/forum/static/css/thread.scss
@@ -25,6 +25,10 @@
                 float: right;
                 margin-left: 32px;
             }
+
+            .actions > input[type="checkbox"] {
+                margin-right: 0.5rem;
+            }
         }
 
         .content {
@@ -37,6 +41,7 @@
                 margin-bottom: 8px;
                 font-size: 90%;
                 white-space: pre-wrap;
+                overflow-wrap: break-word;
             }
 
             &.loading {
